<resources>
    <string name="app_name">mPlay</string>
    <string name="headphones">headphones</string>
    <string name="songs">Songs</string>
    <string name="music_player">Music Player</string>
    <string name="home">Home</string>
    <string name="np">Playing</string>
    <string name="contentDes">now playing icon</string>
    <string name="BoRhap">Bohemian Rhapsody</string>
    <string name="Q">Queen</string>
    <string name="hits">Hits</string>
    <string name="rock">Rock</string>
</resources>
