<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/song_title"
        style="@style/listViewStyle"
        tools:text="@string/BoRhap" />


    <TextView
        android:id="@+id/artist_name"
        style="@style/listViewStyle"
        tools:text="@string/Q" />

    <TextView
        android:id="@+id/album_name"
        style="@style/listViewStyle"
        tools:text="@string/hits" />

    <TextView
        android:id="@+id/song_type"
        style="@style/listViewStyle"
        tools:text="@string/rock" />

</LinearLayout>
