<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MusicPlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/song_home"
            style="@style/intentView"
            android:background="@color/colorPrimary"
            android:text="@string/home" />

        <TextView
            android:id="@+id/song_list"
            style="@style/intentView"
            android:background="@color/intentView"
            android:text="@string/songs" />


    </LinearLayout>

    <ImageView
        style="@style/playIconStyle"
        android:contentDescription="@string/contentDes"
        android:src="@drawable/play_icon" />

</LinearLayout>